iptables-config
*filter
:INPUT ACCEPT [225524:25132504]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [424329:183388315]
:LOGD - [0:0]

-A LOGD -j LOG --log-prefix "Deny IPTABLES "
-A LOGD -j DROP

#--- IP de Internet denegadas
-A INPUT -s a.b.c.d -j LOGD

###--- conexiones entrantes aceptadas
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp -s a.b.c.d/24 --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport abc -j ACCEPT

#-- rules para NFS
-A INPUT -m state --state NEW -p udp --dport 111 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 111 -j ACCEPT
-A INPUT -m state --state NEW -p udp --dport 2049 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 2049 -j ACCEPT
-A INPUT -m state --state NEW -p udp --dport 20048 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 20048 -j ACCEPT

#--- rules para FTP
-A INPUT -p tcp --dport 21 -j ACCEPT
-A OUTPUT -p tcp --sport 20 -j ACCEPT
-A INPUT -p tcp --dport 30000:30100 -j ACCEPT

#--- rules para IP especificas
-A INPUT -p tcp -m state --state NEW -m tcp -s a.b.c.d -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited

COMMIT
